syntax = "proto3";

package course;

import "./inputs/create.input.proto";
import "../../dtos/user.dto.proto";

service CourseService {
  rpc Create (CreateInput) returns (UserDto) {}
}


