syntax = "proto3";

message CreateData {
    string title = 1;
}